Added core NVMe driver from 4.1.15 Kernel source Not changed yet, breaks module build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,9 @@ IF(UNIX)
 ENDIF(UNIX)
 
 
+set(SOURCES charfs.c nvme-core.c)
+
+
 # Fix include directories
 include_directories(${CMAKE_SOURCE_DIR}/include/)
 include_directories(${CMAKE_SOURCE_DIR}/include/uapi/)
@@ -24,14 +27,14 @@ set(INCLUDE_DIRECTORIES ${CMAKE_SOURCE_DIR}/include/)
 set(INCLUDE_DIRECTORIES ${CMAKE_SOURCE_DIR}/include/uapi/)
 set(INCLUDE_DIRECTORIES ${CMAKE_SOURCE_DIR}/arch/arm/include/)
 set(INCLUDE_DIRECTORIES ${CMAKE_SOURCE_DIR}/arch/arm/include/uapi/)
-add_executable(charfs charfs.c)
+add_executable(charfs ${SOURCES})
 add_executable(chardevtest chardevtest.c)
 
 
 # Target to SCP to and make on Zynq
 add_custom_target(
         zynq-mitx ALL
-        SOURCES charfs.c
+        SOURCES ${SOURCES}
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
         COMMAND scp *.c Makefile zynq-mitx:/root/charfs
         COMMAND ssh zynq-mitx 'cd /root/charfs && make'
