Added nvme-scsi.c from 4.1.15 Kernel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ IF(UNIX)
 ENDIF(UNIX)
 
 
-set(SOURCES charfs.c nvme-core.c)
+set(SOURCES charfs.c nvme-core.c nvme-scsi.c)
 
 
 # Fix include directories
