--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,6 @@ add_custom_target(
         zynq-mitx ALL
         SOURCES ${SOURCES}
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-        COMMAND scp *.c Makefile zynq-mitx:/root/charfs
+        COMMAND scp *.c *.h Makefile zynq-mitx:/root/charfs
         COMMAND ssh zynq-mitx 'cd /root/charfs && make'
 )
