Added basic CharFS read test Reads 4096 bytes from device into heap and prints result

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ set(INCLUDE_DIRECTORIES ${CMAKE_SOURCE_DIR}/arch/arm/include/uapi/)
 add_definitions(-D__CLION__)
 add_executable(charfs ${SOURCES})
 add_executable(chardevtest chardevtest.c)
+add_executable(readtest readtest.c)
 
 
 # Target to SCP to and make on Zynq
