Added additional BRAM buffer tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ add_executable(ocmreadtest ocmreadtest.c)
 add_executable(ocmwritetest ocmwritetest.c)
 add_executable(bramreadtest bramreadtest.c)
 add_executable(bramwritetest bramwritetest.c)
+add_executable(bramtest bramtest.c)
 
 
 # Target to SCP to and make on Zynq
