Added another basic read test (reads X blocks)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ add_executable(chario ${SOURCES})
 add_executable(chardevtest chardevtest.c)
 add_executable(readtest readtest.c)
 add_executable(readtest2 readtest2.c)
+add_executable(readtest3 readtest3.c)
 add_executable(writetest writetest.c)
 add_executable(ocmreadtest ocmreadtest.c)
 add_executable(ocmwritetest ocmwritetest.c)
